# zillionare

./: .gitignore  .post-template  .sesskey  .travis.yml  404.html  AUTHORS.md  AUTHORS.rst  CNAME  CONTRIBUTING.md  CONTRIBUTING.rst  Dockerfile  ENHANCED_NEWS_CRAWLER.md  GITHUB_ACTIONS_SETUP.md  HISTORY.md  HISTORY.rst  LICENSE  Lecture02-Introduction-to-Python.ipynb  Makefile  NEWS_CRAWLER_README.md  README.md  README.rst  Research_Paper_Backtest_Analysis.md  backlog.md  docker-compose.tpl  docker-compose.yml  drama.ipynb  drama.xlsx  export_influx_data.py  export_xhs.sh  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  find_unused_images.py  generate_podcast.py  homepage.py  homepage.tpl  index.html  max-dama-translated.srt  max-translated.srt  (+33 more)
.agent/: guidelines.md
.github/instructions/: blog-frontmatter.instructions.md
.github/prompts/: normalize-blog-frontmatter.prompt.md  quant-blog-draft.prompt.md  quant-blog-outline.prompt.md
.github/workflows/: dev.yml  docs.yml  docs.yml.bak  main.yml  news-crawler.yml  release.yml
.iflow/agents/: content-marketer.md  perception-agent.md
.trae/documents/: srt2video.py 需求分析与实现计划.md
_attachment/: zillionare.sh
_drafts/: tasks.todo
_drafts/bash技巧/: index.html
_drafts/closed/: index.html
_drafts/docker技巧/: index.html
_drafts/issues/: index.html
_drafts/makefile的一些技巧/: index.html
_drafts/progress/: index.html
_drafts/remote-develop-with-xtquant/: index.html
_drafts/resources/: index.html
_drafts/rsi/: index.html
_drafts/todo/: index.html
_drafts/xtquant-231209/: index.html
_drafts/实战AI量化交易(3)-均线策略/: index.html
_drafts/实战AI量化交易(4)-动量策略/: index.html
_drafts/实战AI量化交易(6)-接入实盘交易/: index.html
_drafts/实战AI量化交易(7)-数据本地化服务框架/: index.html
_drafts/实战AI量化交易(8)-日历和时间/: index.html
_drafts/未归类/: index.html
articles/products/: index.html
assets/: getting-started.ipynb  zillionare.sh
assets/ad/: ad.html  ad.txt
assets/css/: extra.css  table.less
assets/js/: ad.js
assets/notebooks/: falling-knife-or-bungee.ipynb  h5py_update.ipynb  kcb.index.ipynb  low-volatility.ipynb  low_turnover.ipynb  openbb.ipynb  pyarrow.ipynb  test.ipynb  top-ris-divergency.ipynb  utils.py  weekly-1013.ipynb  三角形整理检测.ipynb  追随美的指引.ipynb
assets/templates/: homepage.tpl
authors/: index.html
blog/: index.html
blog/best_practice_python/: index.html
blog/posts/: index.html
contact/: index.html
coursea/best_practice_python/: index.html
developer_guide/: index.html
diveintozillionare/: index.html
docker/: Dockerfile  Makefile  docker-compose.tpl
docs/: .nav.yml  .pages  Makefile  authors.md  conf.py  contact.md  developer_guide.md  free-resources.md  getting_started.md  history.md  index.md  index.rst  installation.md  installation.rst  jupyter.md  license.md  make.bat  openclaw_gateway_healthcheck_instructions.md  readme.rst  robots.txt  tags.md  tutorial.md  usage.rst
docs/_archive/: jd.md  量化小密圈.md  (+1 more)
download/: zillionare.sh  zillionare_1.0.0.a6.sh
free-resources/: index.html
getting_started/: index.html
history/: index.html
installation/: index.html
javascripts/: course.js  resize-font.js
jupyter/: index.html
launchd/: ai.openclaw.gateway-healthcheck.plist
license/: index.html
openclaw_gateway_healthcheck_instructions/: index.html
overrides/: tags.html
pages/: c01.md  c02.md  c03.md  c04.md
podcast/: index.html
podcast_output/: concat_list.txt
products/: index.html
scripts/: data.py  debug_crawler.py  enhanced_news_crawler.py  fetch_ipo.py  helper.py  lof_arbitrage.py  news_crawler.py  news_manager.py  openclaw_gateway_healthcheck.py  podcast.py  run_news_crawler.sh  schedule_crawler.py  srt2video.py  srt2video.readme.md  srt2video.yaml  test.ipynb  test_crawler.py  test_enhanced_crawler.py  test_html_cleaner.py  train_ipo_model.py  youtube.py
search/: search_index.json
setup/: Makefile  requirements.txt
stylesheets/: extra.css  katex.min.css
tags/: index.html
test/: LSTM_Quantitative_Investment_Analysis.md
tests/: __init__.py  test_zillionare.py
theme/: global-bottom.vue  global-top.vue  package.json  tips.md
tutorial/: index.html  实战AI量化交易(2)-证券列表、日历、行情和概念板块.ipynb  实战AI量化交易(5)-数据可视化.ipynb  实战AI量化交易(6)-接入实盘交易.ipynb
zillionare/: __init__.py
(+1416 files in other folders)
