[tool.poetry]
name = "zillionare"
version = "0.1.0"
description = ""
authors = ["aaron yang <aaron_yang@jieyu.ai>"]
readme = "README.md"

[[tool.poetry.source]]
name = "ali"
url = "https://mirrors.aliyun.com/pypi/simple"
default = true
secondary=false

[tool.poetry.dependencies]
python = "^3.13"
mkdocs-material = "^9.6.14"
mkdocs-include-markdown-plugin = "^7.1.5"
mkdocstrings = "^0.29.1"
mkdocs-autorefs = "^1.4.2"
livereload = "^2.7.1"
mike = "^2.1.3"
mkdocs-awesome-pages-plugin = "^2.10.1"
markdown = "^3.8"
mkdocs-rss-plugin = "^1.17.3"
python-frontmatter = "^1.1.0"
mkdocs-redirects = "^1.2.2"
pyyaml = "^6.0.2"
nbformat = "^5.10.4"
arrow = "^1.3.0"
black = "^25.1.0"
fire = "^0.7.0"
loguru = "^0.7.3"
traitlets = "^5.14.3"
mkdocs = "^1.6.1"
fastjsonschema = "^2.21.1"
jsonschema = "^4.24.0"
attrs = "^25.3.0"
referencing = "^0.36.2"
rpds-py = "^0.25.1"
jsonschema-specifications = "^2025.4.1"
python-slugify = "^8.0.4"
notedown = "^1.5.1"
nbclient = "^0.10.2"
jupyter-client = "^8.6.3"
zmq = "^0.0.0"
jupyter-core = "^5.8.1"
jupyterlab-pygments = "^0.3.0"
pygments = "^2.19.1"
nbconvert = "6.5.4"
lxml = {extras = ["html-clean"], version = "^5.4.0"}
lxml-html-clean = "^0.4.2"
typing-extensions = "^4.13.2"
setuptools = "^80.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
