[tool.poetry]
name = "zillionare-news-crawler"
version = "0.1.0"
description = "Automated news crawler for quantitative trading content"
authors = ["aaron <code@jieyu.ai>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.8.1"
requests = "^2.31.0"
feedparser = "^6.0.10"
beautifulsoup4 = "^4.12.2"
markdownify = "^0.11.6"
pyyaml = "^6.0.1"
openai = "^1.3.0"
python-dateutil = "^2.8.2"
lxml = "^4.9.3"
html2text = "^2020.1.16"
schedule = "^1.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
